# Learn-Intrinsics

./: CMakeLists.txt  CMakePresets.json  amx_exmple_check.py  auto_vectorization.cpp  common.h  main.cpp
src/: common.h
src/001-misc/: prefetch.cpp
src/003-amx/: amx_example.cpp
